# wfc-rs

./: .gitignore  Cargo.toml  NOTES.md  README.md  animate.py  animate_output.py  pyproject.toml
src/: adjacency_builder.rs  adjacency_rules.rs  cli.rs  color.rs  color_type.rs  direction.rs  gif_builder.rs  grid.rs  helpers.rs  image.rs  main.rs  model.rs  types.rs  unique_stack.rs  wave_function.rs  wave_info.rs
src/data/: cell_state.rs  color.rs  coord_2d.rs  direction.rs  id.rs  mod.rs  mode.rs  parse_method.rs  pixel.rs  tile.rs  vector2.rs
